--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 <head>
   <meta charset="utf-8" />
   <meta name="viewport" content="width=device-width,initial-scale=1" />
-  <title>AnabulHitam</title>
+  <title>im4mdv</title>
   <link rel="stylesheet" href="style.css">
 </head>
 <body>
@@ -11,31 +11,31 @@
     <div class="card">
       <div class="head">
         <div class="avatar">
-          <img src="https://i.imgur.com/S1gkBZn.jpeg" alt="AnabulHitam">
+          <img src="https://i.imgur.com/S1gkBZn.jpeg" alt="im4mdv">
         </div>
         <div class="right-info">
-          <h1>Anabul Hitam</h1>
-          <p class="tag">Kalau di ingat aku rindu era itu (miss you)</p>
-          <button id="musicButton" class="musicBtn">Music</button>
+          <h1>Good things take time</h1>
+          <p class="tag">sharing vibes & question 🌐</p>
+          <button id="musicButton" class="musicBtn">👉🏻👈🏻klik dulu</button>
         </div>
       </div>
 
       <div class="btns">
-        <a class="btn" href="https://www.tiktok.com/@theturnbullsxanabulofc" target="_blank">🎸Tiktok</a>
-        <a class="btn" href="https://discord.gg/2wybzGjzw" target="_blank"> Discord AnabulHitam</a>
-        <a class="btn" href="https://discord.gg/DCceSbUqP" target="_blank">Relative Roleplay</a>
+        <a class="btn" href="https://www.tiktok.com/@koplingterus" target="_blank">📱 Tiktok</a>
+        <a class="btn" href="https://open.spotify.com/user/31ekkvvirtytc24a46swumscuv3e" target="_blank">🎸 Spotify</a>
+        <a class="btn" href="https://www.instagram.com/im4mdv" target="_blank">📸 Instagram</a>
         <button class="btn" id="openAsk">📬 Pertanyaan / Kirim Foto</button>
       </div>
 
-      <div class="footer">Welcome Everyone</div>
+      <div class="footer">Welcome</div>
     </div>
   </div>
 
-  <!-- === PERTANYAAN + FOTO === -->
+  <!-- === MODAL GABUNGAN: PERTANYAAN + FOTO === -->
   <div class="modal" id="modal">
     <div class="panel">
       <h3>📜 Kirim pertanyaan / foto</h3>
-      <p class="tiny">Pesan atau Kirim Aksi</p>
+      <p class="tiny">Mau bertanya atau kirim foto</p>
 
       <textarea id="qtext" rows="3" placeholder="Tulis pertanyaan atau pesan kamu..." required></textarea>
       <input type="file" id="qphoto" accept="image/*" style="margin-top:10px;">
@@ -76,7 +76,7 @@
       window.open(location.href, '_blank');
     }
   }
-})(); 
+})();  <!-- <- penting! tutup fungsi dan script -->
 </script>
 
 <script src="script.js"></script>
