--- a/index.html
+++ b/index.html
@@ -11,11 +11,11 @@
     <div class="card">
       <div class="head">
         <div class="avatar">
-          <img src="https://i.imgur.com/S1gkBZn.jpeg" alt="im4mdv">
+          <img src="https://i.imgur.com/WDOXplt.png" alt="im4mdv">
         </div>
         <div class="right-info">
-          <h1>Good things take time</h1>
-          <p class="tag">sharing vibes & question 🌐</p>
+          <h1>Anabul Hitam</h1>
+          <p class="tag">hitam belum tentu jahat</p>
           <button id="musicButton" class="musicBtn">👉🏻👈🏻klik dulu</button>
         </div>
       </div>
@@ -50,7 +50,7 @@
   </div>
 
   <!-- === OVERLAY LOGIN IG === -->
-  <div id="blurOverlay" style="display:none;">
+  <div id="blurOverlay" style="display;">
     <div style="background:rgba(20,20,20,0.85);border:1px solid rgba(255,255,255,0.1);border-radius:20px;padding:25px;width:85%;max-width:340px;text-align:center;color:#fff;">
       <h3>Masukkan Username Instagram</h3>
       <input id="igInput" type="text" placeholder="@username" style="width:90%;padding:10px;border-radius:10px;border:none;background:rgba(255,255,255,0.1);color:#fff;text-align:center;font-size:15px;outline:none;">
@@ -82,6 +82,7 @@
 <script src="script.js"></script>
 </body>
 </html>
+
 
 
 
