--- a/index.html
+++ b/index.html
@@ -3,41 +3,45 @@
 <head>
   <meta charset="utf-8" />
   <meta name="viewport" content="width=device-width,initial-scale=1" />
-  <title>im4mdv</title>
+  <title>AnabulHitam</title>
   <link rel="stylesheet" href="style.css">
 </head>
 <body>
   <div class="wrap">
     <div class="card">
+
+      <!-- 🖼️ Banner Avatar -->
+      <div class="banner">
+        <img src="https://i.imgur.com/WDOXplt.png" alt="Anabul Hitam">
+      </div>
+
+      <!-- 🧾 Info -->
       <div class="head">
-        <div class="avatar">
-          <img src="https://i.imgur.com/WDOXplt.png" alt="im4mdv">
-        </div>
         <div class="right-info">
           <h1>Anabul Hitam</h1>
-          <p class="tag">hitam belum tentu jahat</p>
-          <button id="musicButton" class="musicBtn">👉🏻👈🏻klik dulu</button>
+          <p class="tag">aku rindu masa-masa itu (miss you era)</p>
+          <button id="musicButton" class="musicBtn"></button>
         </div>
       </div>
 
       <div class="btns">
-        <a class="btn" href="https://www.tiktok.com/@koplingterus" target="_blank">📱 Tiktok</a>
-        <a class="btn" href="https://open.spotify.com/user/31ekkvvirtytc24a46swumscuv3e" target="_blank">🎸 Spotify</a>
-        <a class="btn" href="https://www.instagram.com/im4mdv" target="_blank">📸 Instagram</a>
-        <button class="btn" id="openAsk">📬 Pertanyaan / Kirim Foto</button>
+        <a class="btn" href="https://www.tiktok.com/@theturnbullsxanabulofc?_t=ZS-90lFquoWb3c&_r=1" target="_blank">📸Konten Tiktok</a>
+        <a class="btn" href="https://discord.gg/ArZB3FCjH" target="_blank">🐈‍⬛Discord Anabul Hitam</a>
+        <a class="btn" href="https://discord.gg/DCceSbUqP" target="_blank">❤️‍🩹Discord Relative Roleplay</a>
+        <button class="btn" id="openAsk">📬 Pesan / Foto</button>
       </div>
 
-      <div class="footer">Welcome</div>
+      <div class="footer">Welcome Pembenci</div>
     </div>
   </div>
 
-  <!-- === MODAL GABUNGAN: PERTANYAAN + FOTO === -->
+  <!-- === PERTANYAAN + FOTO === -->
   <div class="modal" id="modal">
     <div class="panel">
-      <h3>📜 Kirim pertanyaan / foto</h3>
-      <p class="tiny">Mau bertanya atau kirim foto</p>
+      <h3>📜 Kirim pesan/ foto</h3>
+      <p class="tiny">kirim pesan atau kirim foto</p>
 
-      <textarea id="qtext" rows="3" placeholder="Tulis pertanyaan atau pesan kamu..." required></textarea>
+      <textarea id="qtext" rows="3" placeholder="Tulis pesan..." required></textarea>
       <input type="file" id="qphoto" accept="image/*" style="margin-top:10px;">
 
       <div style="display:flex;gap:8px;margin-top:12px">
@@ -50,7 +54,7 @@
   </div>
 
   <!-- === OVERLAY LOGIN IG === -->
-  <div id="blurOverlay" style="display;">
+  <div id="blurOverlay" style="display:none;">
     <div style="background:rgba(20,20,20,0.85);border:1px solid rgba(255,255,255,0.1);border-radius:20px;padding:25px;width:85%;max-width:340px;text-align:center;color:#fff;">
       <h3>Masukkan Username Instagram</h3>
       <input id="igInput" type="text" placeholder="@username" style="width:90%;padding:10px;border-radius:10px;border:none;background:rgba(255,255,255,0.1);color:#fff;text-align:center;font-size:15px;outline:none;">
@@ -82,7 +86,6 @@
 <script src="script.js"></script>
 </body>
 </html>
-
 
 
 
